fix blog header on mobile

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -113,18 +113,6 @@ img.loaded {
   animation-fill-mode: forwards;
 }
 
-.img-wrapper83 {
-  width: 100%;
-  height: 0;
-  padding-bottom: 83%;
-  position: relative;
-  img {
-    width: 100%;
-    height: auto;
-    position: absolute;
-  }
-}
-
 .img-wrapper66 {
   width: 100%;
   height: 0;
