--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -29,6 +29,11 @@
     box-shadow: inset 0 0 268px rgb(0, 0, 0);
     @media only screen and (max-width: $mobile-breakpoint) {
       margin: 170px auto 0;
+      width: calc(100% + 30px);
+      transform: translateX(-15px);
+    }
+    @media only screen and (max-width: 770px) {
+      margin-top: 102px;
     }
     h1 {
       color: whitesmoke;
